--- a/jy/index.html
+++ b/jy/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
 
 <body>
 
 <head>
-	<title>Àî¾ùÓî°à¼¶Ñ§ºÅ</title>
+	<title>æå‡å®‡ç­çº§å­¦å·</title>
 <head>
 
 <body>
-  <h1>Àî¾ùÓî°à¼¶Ñ§ºÅ</h1>
+  <h1>æå‡å®‡ç­çº§å­¦å·</h1>
 <body>
   <input type="number" id="inputNumber">
-  <button onclick="showName()">È·¶¨</button>
+  <button onclick="showName()">ç¡®å®š</button>
   <p id="result"></p>
   <script>
     function showName() {
@@ -20,184 +20,184 @@
 
       switch (num) {
         case 1:
-          resultElement.innerHTML = "Ò¶ĞÀÆ¼";
+          resultElement.innerHTML = "å¶æ¬£è";
           break;
         case 2:
-          resultElement.innerHTML = "ÂóĞ¡Ã·";
+          resultElement.innerHTML = "éº¦å°æ¢…";
           break;
         case 3:
-          resultElement.innerHTML = "ÀÍÑ§ºÆ";
+          resultElement.innerHTML = "åŠ³å­¦æµ©";
           break;
         case 4:
-          resultElement.innerHTML = "ÀÍÖÇ½Ü";
+          resultElement.innerHTML = "åŠ³æ™ºæ°";
           break;
         case 5:
-          resultElement.innerHTML = "¶Å¹ÚÒÕ";
+          resultElement.innerHTML = "æœå† è‰º";
           break;
         case 6:
-          resultElement.innerHTML = "Àî×Ó»À";
+          resultElement.innerHTML = "æå­ç„•";
           break;
         case 7:
-          resultElement.innerHTML = "Àî¾²âù";
+          resultElement.innerHTML = "æé™æ€¡";
           break;
         case 8:
-          resultElement.innerHTML = "Àî¿Éåû";
+          resultElement.innerHTML = "æå¯å¦";
           break;
         case 9:
-          resultElement.innerHTML = "ÀîÎ°½¡";
+          resultElement.innerHTML = "æä¼Ÿå¥";
           break;
         case 10:
-          resultElement.innerHTML = "ÀîÎ°Ô½";
+          resultElement.innerHTML = "æä¼Ÿè¶Š";
           break;
         case 11:
-          resultElement.innerHTML = "ÀîÓîÃú";
+          resultElement.innerHTML = "æå®‡é“­";
           break;
         case 12:
-          resultElement.innerHTML = "Àî¾ùÓî";
+          resultElement.innerHTML = "æå‡å®‡";
           break;
         case 13:
-          resultElement.innerHTML = "ÀîÖ¾ÎÄ";
+          resultElement.innerHTML = "æå¿—æ–‡";
           break;
         case 14:
-          resultElement.innerHTML = "ÀîÊãÇí";
+          resultElement.innerHTML = "ææŠ’ç¼";
           break;
         case 15:
-          resultElement.innerHTML = "Àî°ÛÖŞ";
+          resultElement.innerHTML = "æä½°æ´²";
           break;
         case 16:
-          resultElement.innerHTML = "Àî¼ÑÒğ";
+          resultElement.innerHTML = "æä½³èŒµ";
           break;
         case 17:
-          resultElement.innerHTML = "Àîì¿";
+          resultElement.innerHTML = "æç‚œ";
           break;
         case 18:
-          resultElement.innerHTML = "Àî¼ÎÁØ";
+          resultElement.innerHTML = "æå˜‰éœ–";
           break;
         case 19:
-          resultElement.innerHTML = "ÀîÇïåû";
+          resultElement.innerHTML = "æç§‹å¦";
           break;
         case 20:
-          resultElement.innerHTML = "ÀîÑåÈØ";
+          resultElement.innerHTML = "æå½¦è“‰";
           break;
         case 21:
-          resultElement.innerHTML = "ÀîÃÀÓ¨";
+          resultElement.innerHTML = "æç¾è¹";
           break;
         case 22:
-          resultElement.innerHTML = "ÀîÔ¬Òã";
+          resultElement.innerHTML = "æè¢æ¯…";
           break;
         case 23:
-          resultElement.innerHTML = "Àîº£Áé";
+          resultElement.innerHTML = "ææµ·çµ";
           break;
         case 24:
-          resultElement.innerHTML = "ÀîÃô¾ı";
+          resultElement.innerHTML = "ææ•å›";
           break;
         case 25:
-          resultElement.innerHTML = "Àî¿µºÀ";
+          resultElement.innerHTML = "æåº·è±ª";
           break;
         case 26:
-          resultElement.innerHTML = "Àîºè·É";
+          resultElement.innerHTML = "æé¸¿é£";
           break;
         case 27:
-          resultElement.innerHTML = "ÀîÊæÓ½";
+          resultElement.innerHTML = "æèˆ’å’";
           break;
         case 28:
-          resultElement.innerHTML = "Ñî×Óãã";
+          resultElement.innerHTML = "æ¨å­æ²£";
           break;
         case 29:
-          resultElement.innerHTML = "ÎâÜÆÇç";
+          resultElement.innerHTML = "å´èŠ·æ™´";
           break;
         case 30:
-          resultElement.innerHTML = "Îâ½õ½­";
+          resultElement.innerHTML = "å´é”¦æ±Ÿ";
           break;
         case 31:
-          resultElement.innerHTML = "á¯ÍğÉº";
+          resultElement.innerHTML = "å²‘å®›çŠ";
           break;
         case 32:
-          resultElement.innerHTML = "ºÎÎÄÒô";
+          resultElement.innerHTML = "ä½•æ–‡éŸ³";
           break;
         case 33:
-          resultElement.innerHTML = "ºÎÓñÁá";
+          resultElement.innerHTML = "ä½•ç‰ç²";
           break;
         case 34:
-          resultElement.innerHTML = "ºÎĞñå«";
+          resultElement.innerHTML = "ä½•æ—­ç€š";
           break;
         case 35:
-          resultElement.innerHTML = "Àî½õÈ¨";
+          resultElement.innerHTML = "æé”¦æƒ";
           break;
         case 36:
-          resultElement.innerHTML = "ºÎÏşÈá";
+          resultElement.innerHTML = "ä½•æ™“æŸ”";
           break;
         case 37:
-          resultElement.innerHTML = "Â½Ë¼Ô´";
+          resultElement.innerHTML = "é™†æ€æº";
           break;
         case 38:
-          resultElement.innerHTML = "Â½¼ÎÃô";
+          resultElement.innerHTML = "é™†å˜‰æ•";
           break;
         case 39:
-          resultElement.innerHTML = "³Â×ÓÑï";
+          resultElement.innerHTML = "é™ˆå­æ‰¬";
           break;
         case 40:
-          resultElement.innerHTML = "³ÂÇïò£";
+          resultElement.innerHTML = "é™ˆç§‹é¢";
           break;
         case 41:
-          resultElement.innerHTML = "³ÂÅà½õ";
+          resultElement.innerHTML = "é™ˆåŸ¹é”¦";
           break;
         case 42:
-          resultElement.innerHTML = "³ÂÕñ¶«";
+          resultElement.innerHTML = "é™ˆæŒ¯ä¸œ";
           break;
         case 43:
-          resultElement.innerHTML = "³ÂÔ£Òğ";
+          resultElement.innerHTML = "é™ˆè£•èŒµ";
           break;
         case 44:
-          resultElement.innerHTML = "³Â½õìÇ";
+          resultElement.innerHTML = "é™ˆé”¦çƒ¨";
           break;
         case 45:
-          resultElement.innerHTML = "³ÂÒã¾ô";
+          resultElement.innerHTML = "é™ˆæ¯…çˆµ";
           break;
         case 46:
-          resultElement.innerHTML = "ºéÎÄ";
+          resultElement.innerHTML = "æ´ªæ–‡";
           break;
         case 47:
-          resultElement.innerHTML = "»ÆÎÄĞù";
+          resultElement.innerHTML = "é»„æ–‡è½©";
           break;
         case 48:
-          resultElement.innerHTML = "»ÆÀö±ù";
+          resultElement.innerHTML = "é»„ä¸½å†°";
           break;
         case 49:
-          resultElement.innerHTML = "ÁºÎÄæÃ";
+          resultElement.innerHTML = "æ¢æ–‡å©·";
           break;
         case 50:
-          resultElement.innerHTML = "ÁºÎ°·æ";
+          resultElement.innerHTML = "æ¢ä¼Ÿé”‹";
           break;
         case 51:
-          resultElement.innerHTML = "ÁºÜÆç²";
+          resultElement.innerHTML = "æ¢èŠ·ç»®";
           break;
         case 52:
-          resultElement.innerHTML = "Áºè÷äŞ";
+          resultElement.innerHTML = "æ¢æ¢“æ»¢";
           break;
         case 53:
-          resultElement.innerHTML = "ÁºÙ»è¤";
+          resultElement.innerHTML = "æ¢å€©ç‘œ";
           break;
         case 54:
-          resultElement.innerHTML = "ÁººÆÃú";
+          resultElement.innerHTML = "æ¢æµ©é“­";
           break;
         case 55:
-          resultElement.innerHTML = "ÁºÒ«ÄÏ";
+          resultElement.innerHTML = "æ¢è€€å—";
           break;
         case 56:
-          resultElement.innerHTML = "Áº¼ÎÑŞ";
+          resultElement.innerHTML = "æ¢å˜‰è‰³";
           break;
         case 57:
-          resultElement.innerHTML = "Ôø½õ«h";
+          resultElement.innerHTML = "æ›¾é”¦ç¥";
           break;
         case 58:
-          resultElement.innerHTML = "²Ì¼Ó";
+          resultElement.innerHTML = "è”¡åŠ ";
           break;
         case 59:
-          resultElement.innerHTML = "Àîãë¿¥";
+          resultElement.innerHTML = "ææ±¶éª";
           break;
         default:
-          resultElement.innerHTML = "ÎŞ";
+          resultElement.innerHTML = "æ— ";
           break; 
       }
     }
@@ -205,7 +205,7 @@
   <body>
   <img src="1.jfif" width="300" height="450" />
 </body>
-  <li><a href="../index.html">·µ»ØÖ÷Ò³</a></li>
+  <li><a href="../index.html">è¿”å›ä¸»é¡µ</a></li>
 </body>
 
 </html>
